Added to ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,115 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+PKonnect/PKonnect.WebApi/obj/Release/netcoreapp3.1/PKonnect.WebApi.csprojAssemblyReference.cache
+PKonnect/PKonnect.WebApi/obj/Release/netcoreapp3.1/PKonnect.WebApi.assets.cache
+PKonnect/PKonnect.WebApi/obj/project.assets.json
+PKonnect/PKonnect.WebApi/obj/PKonnect.WebApi.csproj.nuget.dgspec.json
+PKonnect/PKonnect.WebApi/obj/PKonnect.WebApi.csproj.nuget.cache
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.csprojAssemblyReference.cache
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.assets.cache
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PKonnect.UI.Views.pdb
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PKonnect.UI.Views.dll
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PKonnect.UI.pdb
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PKonnect.UI.dll
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PKonnect.UI.csprojAssemblyReference.cache
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PKonnect.UI.csproj.FileListAbsolute.txt
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PKonnect.UI.assets.cache
+PKonnect/PKonnect.UI/obj/project.assets.json
+PKonnect/PKonnect.UI/obj/PKonnect.UI.csproj.nuget.dgspec.json
+PKonnect/PKonnect.UI/obj/PKonnect.UI.csproj.nuget.cache
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/Razor/Pages/Error.cshtml.g.cs
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/Razor/Pages/_ViewImports.cshtml.g.cs
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.Views.pdb
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.Views.dll
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.pdb
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.dll
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.csprojAssemblyReference.cache
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.csproj.FileListAbsolute.txt
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.assets.cache
+PKonnect/PKonnect.UI/bin/Release/netcoreapp3.1/PKonnect.UI.Views.pdb
+PKonnect/PKonnect.UI/bin/Release/netcoreapp3.1/PKonnect.UI.Views.dll
+PKonnect/PKonnect.UI/bin/Release/netcoreapp3.1/PKonnect.UI.runtimeconfig.dev.json
+PKonnect/PKonnect.UI/bin/Release/netcoreapp3.1/PKonnect.UI.pdb
+PKonnect/PKonnect.UI/bin/Release/netcoreapp3.1/PKonnect.UI.dll
+PKonnect/PKonnect.UI/bin/Debug/netcoreapp3.1/PKonnect.UI.Views.pdb
+PKonnect/PKonnect.UI/bin/Debug/netcoreapp3.1/PKonnect.UI.Views.dll
+PKonnect/PKonnect.UI/bin/Debug/netcoreapp3.1/PKonnect.UI.pdb
+PKonnect/PKonnect.UI/bin/Debug/netcoreapp3.1/PKonnect.UI.dll
+PKonnect/PKonnect.UI/.config/dotnet-tools.json
+PKonnect/PKonnect.Services/obj/Release/netcoreapp3.1/PKonnect.Services.csprojAssemblyReference.cache
+PKonnect/PKonnect.Services/obj/Release/netcoreapp3.1/PKonnect.Services.assets.cache
+PKonnect/PKonnect.Services/obj/project.assets.json
+PKonnect/PKonnect.Services/obj/PKonnect.Services.csproj.nuget.dgspec.json
+PKonnect/PKonnect.Services/obj/PKonnect.Services.csproj.nuget.cache
+PKonnect/PKonnect.Services/obj/Debug/netcoreapp3.1/PKonnect.Services.csprojAssemblyReference.cache
+PKonnect/PKonnect.Services/obj/Debug/netcoreapp3.1/PKonnect.Services.assets.cache
+PKonnect/PKonnect.Models/obj/Release/netcoreapp3.1/PKonnect.Models.assets.cache
+PKonnect/PKonnect.Models/obj/project.assets.json
+PKonnect/PKonnect.Models/obj/PKonnect.Models.csproj.nuget.dgspec.json
+PKonnect/PKonnect.Models/obj/PKonnect.Models.csproj.nuget.cache
+PKonnect/PKonnect.Models/obj/Debug/netcoreapp3.1/PKonnect.Models.csprojAssemblyReference.cache
+PKonnect/PKonnect.Models/obj/Debug/netcoreapp3.1/PKonnect.Models.assets.cache
+PKonnect/PKonnect.Context/obj/Release/netcoreapp3.1/PKonnect.Context.csprojAssemblyReference.cache
+PKonnect/PKonnect.Context/obj/Release/netcoreapp3.1/PKonnect.Context.assets.cache
+PKonnect/PKonnect.Context/obj/project.assets.json
+PKonnect/PKonnect.Context/obj/PKonnect.Context.csproj.nuget.dgspec.json
+PKonnect/PKonnect.Context/obj/PKonnect.Context.csproj.nuget.cache
+PKonnect/PKonnect.Context/obj/Debug/netcoreapp3.1/PKonnect.Context.csprojAssemblyReference.cache
+PKonnect/PKonnect.Context/obj/Debug/netcoreapp3.1/PKonnect.Context.assets.cache
+PKonnect/PKonnect.WebApi/obj/Release/netcoreapp3.1/PKonnect.WebApi.csprojAssemblyReference.cache
+PKonnect/PKonnect.WebApi/obj/Release/netcoreapp3.1/PKonnect.WebApi.assets.cache
+PKonnect/PKonnect.WebApi/obj/project.assets.json
+PKonnect/PKonnect.WebApi/obj/PKonnect.WebApi.csproj.nuget.dgspec.json
+PKonnect/PKonnect.WebApi/obj/PKonnect.WebApi.csproj.nuget.cache
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.csprojAssemblyReference.cache
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.assets.cache
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PKonnect.UI.Views.pdb
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PKonnect.UI.Views.dll
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PKonnect.UI.pdb
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PKonnect.UI.dll
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PKonnect.UI.csprojAssemblyReference.cache
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PKonnect.UI.csproj.FileListAbsolute.txt
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PKonnect.UI.assets.cache
+PKonnect/PKonnect.UI/obj/project.assets.json
+PKonnect/PKonnect.UI/obj/PKonnect.UI.csproj.nuget.dgspec.json
+PKonnect/PKonnect.UI/obj/PKonnect.UI.csproj.nuget.cache
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/Razor/Pages/Error.cshtml.g.cs
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/Razor/Pages/_ViewImports.cshtml.g.cs
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.Views.pdb
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.Views.dll
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.pdb
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.dll
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.csprojAssemblyReference.cache
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.csproj.FileListAbsolute.txt
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.assets.cache
+PKonnect/PKonnect.UI/bin/Release/netcoreapp3.1/PKonnect.UI.Views.pdb
+PKonnect/PKonnect.UI/bin/Release/netcoreapp3.1/PKonnect.UI.Views.dll
+PKonnect/PKonnect.UI/bin/Release/netcoreapp3.1/PKonnect.UI.runtimeconfig.dev.json
+PKonnect/PKonnect.UI/bin/Release/netcoreapp3.1/PKonnect.UI.pdb
+PKonnect/PKonnect.UI/bin/Release/netcoreapp3.1/PKonnect.UI.dll
+PKonnect/PKonnect.UI/bin/Debug/netcoreapp3.1/PKonnect.UI.Views.pdb
+PKonnect/PKonnect.UI/bin/Debug/netcoreapp3.1/PKonnect.UI.Views.dll
+PKonnect/PKonnect.UI/bin/Debug/netcoreapp3.1/PKonnect.UI.pdb
+PKonnect/PKonnect.UI/bin/Debug/netcoreapp3.1/PKonnect.UI.dll
+PKonnect/PKonnect.UI/.config/dotnet-tools.json
+PKonnect/PKonnect.Services/obj/Release/netcoreapp3.1/PKonnect.Services.csprojAssemblyReference.cache
+PKonnect/PKonnect.Services/obj/Release/netcoreapp3.1/PKonnect.Services.assets.cache
+PKonnect/PKonnect.Services/obj/project.assets.json
+PKonnect/PKonnect.Services/obj/PKonnect.Services.csproj.nuget.dgspec.json
+PKonnect/PKonnect.Services/obj/PKonnect.Services.csproj.nuget.cache
+PKonnect/PKonnect.Services/obj/Debug/netcoreapp3.1/PKonnect.Services.csprojAssemblyReference.cache
+PKonnect/PKonnect.Services/obj/Debug/netcoreapp3.1/PKonnect.Services.assets.cache
+PKonnect/PKonnect.Models/obj/Release/netcoreapp3.1/PKonnect.Models.assets.cache
+PKonnect/PKonnect.Models/obj/project.assets.json
+PKonnect/PKonnect.Models/obj/PKonnect.Models.csproj.nuget.dgspec.json
+PKonnect/PKonnect.Models/obj/PKonnect.Models.csproj.nuget.cache
+PKonnect/PKonnect.Models/obj/Debug/netcoreapp3.1/PKonnect.Models.csprojAssemblyReference.cache
+PKonnect/PKonnect.Models/obj/Debug/netcoreapp3.1/PKonnect.Models.assets.cache
+PKonnect/PKonnect.Context/obj/Release/netcoreapp3.1/PKonnect.Context.csprojAssemblyReference.cache
+PKonnect/PKonnect.Context/obj/Release/netcoreapp3.1/PKonnect.Context.assets.cache
+PKonnect/PKonnect.Context/obj/project.assets.json
+PKonnect/PKonnect.Context/obj/PKonnect.Context.csproj.nuget.dgspec.json
+PKonnect/PKonnect.Context/obj/PKonnect.Context.csproj.nuget.cache
+PKonnect/PKonnect.Context/obj/Debug/netcoreapp3.1/PKonnect.Context.csprojAssemblyReference.cache
+PKonnect/PKonnect.Context/obj/Debug/netcoreapp3.1/PKonnect.Context.assets.cache
