Removed debug folders

--- a/.gitignore
+++ b/.gitignore
@@ -451,3 +451,86 @@ PKonnect/PKonnect.Context/obj/PKonnect.Context.csproj.nuget.cache
 PKonnect/PKonnect.Context/obj/Debug/netcoreapp3.1/PKonnect.Context.csprojAssemblyReference.cache
 PKonnect/PKonnect.Context/obj/Debug/netcoreapp3.1/PKonnect.Context.assets.cache
 PKonnect/.vs/PKonnect/config/applicationhost.config
+PKonnect/PKonnect.Context/bin/Debug/netcoreapp3.1/PKonnect.Context.dll
+PKonnect/PKonnect.Context/bin/Debug/netcoreapp3.1/PKonnect.Context.pdb
+PKonnect/PKonnect.Context/bin/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.Context/bin/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.Context/obj/Debug/netcoreapp3.1/PKonnect.Context.csproj.FileListAbsolute.txt
+PKonnect/PKonnect.Context/obj/Debug/netcoreapp3.1/PKonnect.Context.csprojAssemblyReference.cache
+PKonnect/PKonnect.Context/obj/Debug/netcoreapp3.1/PKonnect.Context.dll
+PKonnect/PKonnect.Context/obj/Debug/netcoreapp3.1/PKonnect.Context.pdb
+PKonnect/PKonnect.Models/bin/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.Models/bin/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.Models/obj/Debug/netcoreapp3.1/PKonnect.Models.csproj.FileListAbsolute.txt
+PKonnect/PKonnect.Models/obj/Debug/netcoreapp3.1/PKonnect.Models.csprojAssemblyReference.cache
+PKonnect/PKonnect.Models/obj/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.Models/obj/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.Services/bin/Debug/netcoreapp3.1/PKonnect.Context.dll
+PKonnect/PKonnect.Services/bin/Debug/netcoreapp3.1/PKonnect.Context.pdb
+PKonnect/PKonnect.Services/bin/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.Services/bin/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.Services/bin/Debug/netcoreapp3.1/PKonnect.Services.dll
+PKonnect/PKonnect.Services/bin/Debug/netcoreapp3.1/PKonnect.Services.pdb
+PKonnect/PKonnect.Services/obj/Debug/netcoreapp3.1/PKonnect.Services.csproj.FileListAbsolute.txt
+PKonnect/PKonnect.Services/obj/Debug/netcoreapp3.1/PKonnect.Services.csprojAssemblyReference.cache
+PKonnect/PKonnect.Services/obj/Debug/netcoreapp3.1/PKonnect.Services.dll
+PKonnect/PKonnect.Services/obj/Debug/netcoreapp3.1/PKonnect.Services.pdb
+PKonnect/PKonnect.UI/ClientApp/build/asset-manifest.json
+PKonnect/PKonnect.UI/ClientApp/build/favicon.ico
+PKonnect/PKonnect.UI/ClientApp/build/index.html
+PKonnect/PKonnect.UI/ClientApp/build/manifest.json
+PKonnect/PKonnect.UI/ClientApp/build/precache-manifest.0fd24ddba7a297e4ff0005d9b55a6fdb.js
+PKonnect/PKonnect.UI/ClientApp/build/service-worker.js
+PKonnect/PKonnect.UI/ClientApp/build/static/css/2.f1790bc7.chunk.css
+PKonnect/PKonnect.UI/ClientApp/build/static/css/2.f1790bc7.chunk.css.map
+PKonnect/PKonnect.UI/ClientApp/build/static/css/main.390ab7fd.chunk.css
+PKonnect/PKonnect.UI/ClientApp/build/static/css/main.390ab7fd.chunk.css.map
+PKonnect/PKonnect.UI/ClientApp/build/static/js/2.6dbff34f.chunk.js
+PKonnect/PKonnect.UI/ClientApp/build/static/js/2.6dbff34f.chunk.js.map
+PKonnect/PKonnect.UI/ClientApp/build/static/js/main.b93f312b.chunk.js
+PKonnect/PKonnect.UI/ClientApp/build/static/js/main.b93f312b.chunk.js.map
+PKonnect/PKonnect.UI/ClientApp/build/static/js/runtime~main.a8a9905a.js
+PKonnect/PKonnect.UI/ClientApp/build/static/js/runtime~main.a8a9905a.js.map
+PKonnect/PKonnect.UI/ClientApp/build/static/media/Communities_WelcomeScreen.f96c95a2.png
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.csprojAssemblyReference.cache
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PKonnect.UI.csprojAssemblyReference.cache
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PubTmp/Out/ClientApp/build/asset-manifest.json
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PubTmp/Out/ClientApp/build/index.html
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PubTmp/Out/ClientApp/build/precache-manifest.d226a91ceace60fd800372c2d84b541d.js
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PubTmp/Out/ClientApp/build/service-worker.js
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PubTmp/Out/ClientApp/build/static/css/2.22a7d4ef.chunk.css
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PubTmp/Out/ClientApp/build/static/css/2.22a7d4ef.chunk.css.map
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PubTmp/Out/ClientApp/build/static/css/main.6ddd71b9.chunk.css
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PubTmp/Out/ClientApp/build/static/css/main.6ddd71b9.chunk.css.map
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PubTmp/Out/ClientApp/build/static/js/2.c4b4330e.chunk.js
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PubTmp/Out/ClientApp/build/static/js/2.c4b4330e.chunk.js.map
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PubTmp/Out/ClientApp/build/static/js/main.ac179359.chunk.js
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PubTmp/Out/ClientApp/build/static/js/main.ac179359.chunk.js.map
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PubTmp/Out/ClientApp/build/static/js/runtime~main.a8a9905a.js
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PubTmp/Out/PKonnect.UI.dll
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PubTmp/Out/PKonnect.UI.pdb
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PubTmp/Out/PKonnect.UI.Views.dll
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PubTmp/Out/PKonnect.UI.Views.pdb
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PubTmp/PKonnect.UI.Parameters.xml
+PKonnect/PKonnect.UI/obj/Release/netcoreapp3.1/PubTmp/PKonnect.UI.SourceManifest.xml
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.Context.dll
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.Context.pdb
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.Services.dll
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.Services.pdb
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.WebApi.dll
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.WebApi.pdb
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.WebApi.runtimeconfig.dev.json
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.csproj.FileListAbsolute.txt
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.csprojAssemblyReference.cache
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.dll
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.pdb
+PKonnect/PKonnect/bin/Debug/PKonnect.dacpac
+PKonnect/PKonnect/bin/Debug/PKonnect.dll
+PKonnect/PKonnect/bin/Debug/PKonnect.pdb
+PKonnect/PKonnect/obj/Debug/Model.xml
+PKonnect/PKonnect/obj/Debug/PKonnect.dll
+PKonnect/PKonnect/obj/Debug/PKonnect.pdb
+PKonnect/PKonnect/obj/Debug/PKonnect.sqlproj.FileListAbsolute.txt
+PKonnect/PKonnect/obj/Debug/PKonnect.sqlprojAssemblyReference.cache
