Added to ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -541,3 +541,9 @@ PKonnect/PKonnect.Context/obj/Debug/netcoreapp3.1/PKonnect.Context.csprojAssembl
 PKonnect/.vs/PKonnect/v16/.suo
 PKonnect/.vs/PKonnect/DesignTimeBuild/.dtbcache
 PKonnect/PKonnect/PKonnect.jfm
+PKonnect/.vs/PKonnect/DesignTimeBuild/.dtbcache
+PKonnect/.vs/PKonnect/v16/.suo
+PKonnect/.vs/PKonnect/v16/Server/sqlite3/storage.ide
+PKonnect/PKonnect.Services/obj/Debug/netcoreapp3.1/PKonnect.Services.csprojAssemblyReference.cache
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.csprojAssemblyReference.cache
+PKonnect/PKonnect/PKonnect.jfm
