--- a/.gitignore
+++ b/.gitignore
@@ -547,3 +547,58 @@ PKonnect/.vs/PKonnect/v16/Server/sqlite3/storage.ide
 PKonnect/PKonnect.Services/obj/Debug/netcoreapp3.1/PKonnect.Services.csprojAssemblyReference.cache
 PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.csprojAssemblyReference.cache
 PKonnect/PKonnect/PKonnect.jfm
+PKonnect/.vs/PKonnect/v16/.suo
+PKonnect/PKonnect.Context/bin/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.Context/bin/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.Context/obj/Debug/netcoreapp3.1/PKonnect.Context.assets.cache
+PKonnect/PKonnect.Context/obj/Debug/netcoreapp3.1/PKonnect.Context.csprojAssemblyReference.cache
+PKonnect/PKonnect.Context/obj/PKonnect.Context.csproj.nuget.cache
+PKonnect/PKonnect.Context/obj/PKonnect.Context.csproj.nuget.dgspec.json
+PKonnect/PKonnect.Context/obj/PKonnect.Context.csproj.nuget.g.props
+PKonnect/PKonnect.Context/obj/project.assets.json
+PKonnect/PKonnect.Models/bin/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.Models/bin/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.Models/obj/Debug/netcoreapp3.1/PKonnect.Models.assets.cache
+PKonnect/PKonnect.Models/obj/Debug/netcoreapp3.1/PKonnect.Models.csprojAssemblyReference.cache
+PKonnect/PKonnect.Models/obj/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.Models/obj/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.Models/obj/PKonnect.Models.csproj.nuget.cache
+PKonnect/PKonnect.Models/obj/PKonnect.Models.csproj.nuget.dgspec.json
+PKonnect/PKonnect.Models/obj/PKonnect.Models.csproj.nuget.g.props
+PKonnect/PKonnect.Models/obj/project.assets.json
+PKonnect/PKonnect.Services/bin/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.Services/bin/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.Services/obj/project.assets.json
+PKonnect/PKonnect.UI/bin/Debug/netcoreapp3.1/PKonnect.UI.dll
+PKonnect/PKonnect.UI/bin/Debug/netcoreapp3.1/PKonnect.UI.pdb
+PKonnect/PKonnect.UI/bin/Debug/netcoreapp3.1/PKonnect.UI.runtimeconfig.dev.json
+PKonnect/PKonnect.UI/bin/Debug/netcoreapp3.1/PKonnect.UI.Views.dll
+PKonnect/PKonnect.UI/bin/Debug/netcoreapp3.1/PKonnect.UI.Views.pdb
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.assets.cache
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.csprojAssemblyReference.cache
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.dll
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.pdb
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.Views.dll
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.Views.pdb
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/Razor/Pages/_ViewImports.cshtml.g.cs
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/Razor/Pages/Error.cshtml.g.cs
+PKonnect/PKonnect.UI/obj/PKonnect.UI.csproj.nuget.cache
+PKonnect/PKonnect.UI/obj/PKonnect.UI.csproj.nuget.dgspec.json
+PKonnect/PKonnect.UI/obj/PKonnect.UI.csproj.nuget.g.props
+PKonnect/PKonnect.UI/obj/project.assets.json
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/appsettings.json
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.Services.dll
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.Services.pdb
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.WebApi.dll
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.WebApi.pdb
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.assets.cache
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.csproj.FileListAbsolute.txt
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.csprojAssemblyReference.cache
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.dll
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.pdb
+PKonnect/PKonnect.WebApi/obj/PKonnect.WebApi.csproj.nuget.cache
+PKonnect/PKonnect.WebApi/obj/PKonnect.WebApi.csproj.nuget.dgspec.json
+PKonnect/PKonnect.WebApi/obj/PKonnect.WebApi.csproj.nuget.g.props
+PKonnect/PKonnect.WebApi/obj/project.assets.json
