--- a/.gitignore
+++ b/.gitignore
@@ -602,3 +602,30 @@ PKonnect/PKonnect.WebApi/obj/PKonnect.WebApi.csproj.nuget.cache
 PKonnect/PKonnect.WebApi/obj/PKonnect.WebApi.csproj.nuget.dgspec.json
 PKonnect/PKonnect.WebApi/obj/PKonnect.WebApi.csproj.nuget.g.props
 PKonnect/PKonnect.WebApi/obj/project.assets.json
+PKonnect/PKonnect.WebApi/Properties/launchSettings.json
+PKonnect/PKonnect.WebApi/obj/project.assets.json
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.csprojAssemblyReference.cache
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.csproj.FileListAbsolute.txt
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/Properties/launchSettings.json
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/appsettings.json
+PKonnect/PKonnect.UI/Properties/launchSettings.json
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.csprojAssemblyReference.cache
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.csproj.FileListAbsolute.txt
+PKonnect/PKonnect.UI/bin/Debug/netcoreapp3.1/Properties/launchSettings.json
+PKonnect/PKonnect.Services/bin/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.Services/bin/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.Models/obj/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.Models/obj/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.Models/obj/Debug/netcoreapp3.1/PKonnect.Models.csprojAssemblyReference.cache
+PKonnect/PKonnect.Models/obj/Debug/netcoreapp3.1/PKonnect.Models.csproj.FileListAbsolute.txt
+PKonnect/PKonnect.Models/bin/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.Models/bin/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.Context/obj/Debug/netcoreapp3.1/PKonnect.Context.csprojAssemblyReference.cache
+PKonnect/PKonnect.Context/bin/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.Context/bin/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/.vs/PKonnect/v16/Server/sqlite3/storage.ide
+PKonnect/.vs/PKonnect/v16/.suo
+PKonnect/.vs/PKonnect/DesignTimeBuild/.dtbcache
+PKonnect/.vs/PKonnect/config/applicationhost.config
