Added to ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -629,3 +629,16 @@ PKonnect/.vs/PKonnect/v16/Server/sqlite3/storage.ide
 PKonnect/.vs/PKonnect/v16/.suo
 PKonnect/.vs/PKonnect/DesignTimeBuild/.dtbcache
 PKonnect/.vs/PKonnect/config/applicationhost.config
+PKonnect/.vs/PKonnect/DesignTimeBuild/.dtbcache
+PKonnect/.vs/PKonnect/v16/Server/sqlite3/storage.ide
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/appsettings.json
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.WebApi.deps.json
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.WebApi.dll
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.WebApi.pdb
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.assets.cache
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.csprojAssemblyReference.cache
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.dll
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.pdb
+PKonnect/PKonnect.WebApi/obj/PKonnect.WebApi.csproj.nuget.cache
+PKonnect/PKonnect.WebApi/obj/PKonnect.WebApi.csproj.nuget.dgspec.json
+PKonnect/PKonnect.WebApi/obj/project.assets.json
