Code changes for submitting the data to database from UI.

--- a/PKonnect/PKonnect.WebApi/appsettings.json
+++ b/PKonnect/PKonnect.WebApi/appsettings.json
@@ -16,5 +16,8 @@
     "ClientId": "6a1d9f96-0c0c-43a6-b3d2-aba809e58539",
     "Audience": "",
     "CallbackPath": "/api/Employees"
+  },
+  "CustomVariables": {
+    "AppUrl": "https://localhost:44314"
   }
 }
