Updated ignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -538,16 +538,13 @@ PKonnect/PKonnect/obj/Debug/PKonnect.sqlprojAssemblyReference.cache
 PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.csprojAssemblyReference.cache
 PKonnect/PKonnect.Services/obj/Debug/netcoreapp3.1/PKonnect.Services.csprojAssemblyReference.cache
 PKonnect/PKonnect.Context/obj/Debug/netcoreapp3.1/PKonnect.Context.csprojAssemblyReference.cache
-PKonnect/.vs/PKonnect/v16/.suo
+
 PKonnect/.vs/PKonnect/DesignTimeBuild/.dtbcache
 PKonnect/PKonnect/PKonnect.jfm
 PKonnect/.vs/PKonnect/DesignTimeBuild/.dtbcache
-PKonnect/.vs/PKonnect/v16/.suo
-PKonnect/.vs/PKonnect/v16/Server/sqlite3/storage.ide
 PKonnect/PKonnect.Services/obj/Debug/netcoreapp3.1/PKonnect.Services.csprojAssemblyReference.cache
 PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.csprojAssemblyReference.cache
 PKonnect/PKonnect/PKonnect.jfm
-PKonnect/.vs/PKonnect/v16/.suo
 PKonnect/PKonnect.Context/bin/Debug/netcoreapp3.1/PKonnect.Models.dll
 PKonnect/PKonnect.Context/bin/Debug/netcoreapp3.1/PKonnect.Models.pdb
 PKonnect/PKonnect.Context/obj/Debug/netcoreapp3.1/PKonnect.Context.assets.cache
@@ -625,12 +622,9 @@ PKonnect/PKonnect.Models/bin/Debug/netcoreapp3.1/PKonnect.Models.dll
 PKonnect/PKonnect.Context/obj/Debug/netcoreapp3.1/PKonnect.Context.csprojAssemblyReference.cache
 PKonnect/PKonnect.Context/bin/Debug/netcoreapp3.1/PKonnect.Models.pdb
 PKonnect/PKonnect.Context/bin/Debug/netcoreapp3.1/PKonnect.Models.dll
-PKonnect/.vs/PKonnect/v16/Server/sqlite3/storage.ide
-PKonnect/.vs/PKonnect/v16/.suo
 PKonnect/.vs/PKonnect/DesignTimeBuild/.dtbcache
 PKonnect/.vs/PKonnect/config/applicationhost.config
 PKonnect/.vs/PKonnect/DesignTimeBuild/.dtbcache
-PKonnect/.vs/PKonnect/v16/Server/sqlite3/storage.ide
 PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/appsettings.json
 PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.WebApi.deps.json
 PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.WebApi.dll
@@ -642,3 +636,11 @@ PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.pdb
 PKonnect/PKonnect.WebApi/obj/PKonnect.WebApi.csproj.nuget.cache
 PKonnect/PKonnect.WebApi/obj/PKonnect.WebApi.csproj.nuget.dgspec.json
 PKonnect/PKonnect.WebApi/obj/project.assets.json
+PKonnect/PKonnect.UI/bin/Debug/netcoreapp3.1/appsettings.json
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.csprojAssemblyReference.cache
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/appsettings.json
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.WebApi.dll
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.WebApi.pdb
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.csprojAssemblyReference.cache
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.dll
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.pdb
