--- a/PKonnect/PKonnect.UI/ClientApp/package.json
+++ b/PKonnect/PKonnect.UI/ClientApp/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.8",
+    "@microsoft/microsoft-graph-client": "^1.7.0",
     "babel-eslint": "10.0.1",
     "bootstrap": "^4.1.3",
     "jquery": "^3.4.1",
@@ -15,8 +17,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "^3.0.1",
     "reactstrap": "^6.3.0",
-    "rimraf": "^2.6.2",
-    "@microsoft/microsoft-graph-client": "^1.7.0"
+    "rimraf": "^2.6.2"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
