Added to ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -704,3 +704,19 @@ PKonnect/PKonnect.UI/bin/Release/netcoreapp3.1/PKonnect.UI.runtimeconfig.json
 PKonnect/PKonnect.UI/bin/Release/netcoreapp3.1/PKonnect.UI.Views.dll
 PKonnect/PKonnect.UI/bin/Release/netcoreapp3.1/PKonnect.UI.Views.pdb
 PKonnect/PKonnect.UI/bin/Release/netcoreapp3.1/Properties/launchSettings.json
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.csprojAssemblyReference.cache
+PKonnect/PKonnect.Services/bin/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.Services/bin/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.Services/bin/Debug/netcoreapp3.1/PKonnect.Context.pdb
+PKonnect/PKonnect.Services/bin/Debug/netcoreapp3.1/PKonnect.Context.dll
+PKonnect/PKonnect.Models/obj/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.Models/obj/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.Models/bin/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.Models/bin/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.Context/obj/Debug/netcoreapp3.1/PKonnect.Context.pdb
+PKonnect/PKonnect.Context/obj/Debug/netcoreapp3.1/PKonnect.Context.dll
+PKonnect/PKonnect.Context/obj/Debug/netcoreapp3.1/PKonnect.Context.csprojAssemblyReference.cache
+PKonnect/PKonnect.Context/bin/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.Context/bin/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.Context/bin/Debug/netcoreapp3.1/PKonnect.Context.pdb
+PKonnect/PKonnect.Context/bin/Debug/netcoreapp3.1/PKonnect.Context.dll
