Added to ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -759,3 +759,28 @@ PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.pdb
 PKonnect/PKonnect.WebApi/obj/PKonnect.WebApi.csproj.nuget.dgspec.json
 PKonnect/PKonnect.WebApi/obj/PKonnect.WebApi.csproj.nuget.g.props
 PKonnect/PKonnect.WebApi/obj/project.assets.json
+PKonnect/.vs/PKonnect/v16/.suo
+PKonnect/PKonnect.Context/bin/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.Context/bin/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.Context/obj/Debug/netcoreapp3.1/PKonnect.Context.csprojAssemblyReference.cache
+PKonnect/PKonnect.Models/bin/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.Models/bin/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.Models/obj/Debug/netcoreapp3.1/PKonnect.Models.csprojAssemblyReference.cache
+PKonnect/PKonnect.Models/obj/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.Models/obj/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.Services/bin/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.Services/bin/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.UI/obj/Debug/netcoreapp3.1/PKonnect.UI.csprojAssemblyReference.cache
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.Models.dll
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.Models.pdb
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.WebApi.deps.json
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.WebApi.dll
+PKonnect/PKonnect.WebApi/bin/Debug/netcoreapp3.1/PKonnect.WebApi.pdb
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.assets.cache
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.csproj.FileListAbsolute.txt
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.csprojAssemblyReference.cache
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.dll
+PKonnect/PKonnect.WebApi/obj/Debug/netcoreapp3.1/PKonnect.WebApi.pdb
+PKonnect/PKonnect.WebApi/obj/PKonnect.WebApi.csproj.nuget.dgspec.json
+PKonnect/PKonnect.WebApi/obj/PKonnect.WebApi.csproj.nuget.g.props
+PKonnect/PKonnect.WebApi/obj/project.assets.json
