--- a/PKonnect/PKonnect.UI/ClientApp/package.json
+++ b/PKonnect/PKonnect.UI/ClientApp/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@ctrl/ngx-emoji-mart": "^3.0.4",
     "@fortawesome/angular-fontawesome": "^0.6.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
