--- a/PKonnect/PKonnect.UI/ClientApp/package.json
+++ b/PKonnect/PKonnect.UI/ClientApp/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "microsoft-adal-angular6": "^1.3.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
