--- a/PKonnect/PKonnect.UI/ClientApp/package.json
+++ b/PKonnect/PKonnect.UI/ClientApp/package.json
@@ -26,6 +26,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@types/amplitude-js": "^5.11.0",
+    "amplitude-js": "^6.2.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "microsoft-adal-angular6": "^1.3.0",
