--- a/PKonnect/PKonnect.UI/Properties/launchSettings.json
+++ b/PKonnect/PKonnect.UI/Properties/launchSettings.json
@@ -1,9 +1,9 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:50034",
+      "applicationUrl": "http://localhost:50045",
       "sslPort": 44351
     }
   },
@@ -17,11 +17,10 @@
     },
     "PKonnect.UI": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001"
     }
   }
 }
