--- a/PKonnect/PKonnect.WebApi/Properties/launchSettings.json
+++ b/PKonnect/PKonnect.WebApi/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/Employees",
+      "launchUrl": "api/Resources",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "PKonnect.WebApi": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/Employees",
+      "launchUrl": "api/Resources",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
