Revert "Renaming and added new tables information."
This reverts commit 4f95a1f1a23525b71206ce4887ae36347c7a558b.

--- a/PKonnect/PKonnect.UI/ClientApp/angular.json
+++ b/PKonnect/PKonnect.UI/ClientApp/angular.json
@@ -128,10 +128,6 @@
           }
         }
       }
-    }
-  },
-  "defaultProject": "pk-connections",
-  "cli": {
-    "analytics": "b93ba326-1103-4486-b9c4-5955219fcf0e"
-  }
+    }},
+  "defaultProject": "pk-connections"
 }
