--- a/PKonnect/PKonnect.WebApi/appsettings.json
+++ b/PKonnect/PKonnect.WebApi/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   //"ConnectionStrings": { "DBConnectionString": "Server=tcp:dattagunturu.database.windows.net,1433;Initial Catalog=PKonnect;Persist Security Info=False;User ID=serveradmin;Password=Prokarma@1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" },
-  "ConnectionStrings": { "DBConnectionString": "Server=10.10.100.149;Initial Catalog=PKonnect;Persist Security Info=False;User ID=pkcommunity;Password=PK@karma2020;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;" },
+  "ConnectionStrings": { "DBConnectionString": "Server=10.10.100.144;Initial Catalog=PKonnect;Persist Security Info=False;User ID=pkcommunity;Password=PK@karma2020;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;" },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -16,7 +16,7 @@
     "TenantId": "5786743f-b4c4-4f8e-978e-95d7ff2aef9d",
     "ClientId": "6a1d9f96-0c0c-43a6-b3d2-aba809e58539",
     "Audience": "",
-    "CallbackPath": "/api/Resources"
+    "CallbackPath": "/api/Employees"
   },
   "CustomVariables": {
     "AppUrl": "https://localhost:44314"
