--- a/PKonnect/PKonnect.UI/ClientApp/package.json
+++ b/PKonnect/PKonnect.UI/ClientApp/package.json
@@ -21,16 +21,18 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@azure/msal-angular": "^1.0.0",
     "@ctrl/ngx-emoji-mart": "^3.0.4",
     "@fortawesome/angular-fontawesome": "^0.6.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@microsoft/microsoft-graph-client": "^2.0.0",
     "@types/amplitude-js": "^5.11.0",
     "amplitude-js": "^6.2.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
-    "microsoft-adal-angular6": "^1.3.0",
+    "msal": "^1.3.2",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "subsink": "^1.0.1",
