--- a/PKonnect/PKonnect.UI/ClientApp/package.json
+++ b/PKonnect/PKonnect.UI/ClientApp/package.json
@@ -25,6 +25,7 @@
     "@ctrl/ngx-emoji-mart": "^3.0.4",
     "@fortawesome/angular-fontawesome": "^0.6.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@microsoft/microsoft-graph-client": "^2.0.0",
