--- a/PKonnect/PKonnect.UI/ClientApp/package.json
+++ b/PKonnect/PKonnect.UI/ClientApp/package.json
@@ -34,6 +34,7 @@
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "msal": "^1.3.2",
+    "ngx-hotjar": "^9.0.2",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "subsink": "^1.0.1",
